# ComfyNotch

./: .gitattributes  .gitignore  .swiftlint.yml  .tokeignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClosedAlbumWidget.d  ClosedAlbumWidget.swiftdeps  ComfyNotch.entitlements  FALLBACK_NOTCH_HEIGHT_README.md  LICENSE  MovingDotsWidget.d  MovingDotsWidget.swiftdeps  Package.swift  Privacy.md  README.md  SettingsWidget.d  SettingsWidget.swiftdeps  TASKS.md  TestPlan.xctestplan  appcast.xml  buildServer.json  build_app.sh  verify_implementation.sh
.build/: build.db  debug.yaml
.github/workflows/: run-tests.yml
ComfyCalendar/: Package.swift
ComfyNotch/: AppDelegate.swift  ComfyNotch.entitlements  ComfyNotchApp.swift  ComfyNotchView.swift  Info.plist
ComfyNotch.app/Contents/: Info.plist
ComfyNotch.xcodeproj/: project.pbxproj
ComfyNotchTests/: AudioManagerTests.swift  SettingsModelTests.swift  UIManagerTests.swift  run_tests.sh
ComfyNotchUITests/: ClosedNotchTests.swift  ComfyNotchUITests.swift  MusicPlayerUITests.swift
Docs/: SettingsStructure.md  tracker.md
Resources/: Info.plist
Scripts/: build.sh  build_archive.sh  build_lsp.sh  build_release.sh  check_files.sh  clean_project_folder.sh  end_leak_check.sh  leak_check.sh  profile_memory.sh  run.sh  stats_longest_file.sh  stats_release_downloads.sh  zip_app.sh
cli/: .gitignore  .tokeignore  CMakeLists.txt  README.md  compile.sh
cli/config/: ExportOptions.plist  comfyx.ini
cli/include/: comfyx_paths.h  config.h
cli/include/ui/: BuildArchiveView.h  ComfyUI.h  ConfigView.h
cli/include/utils/: Logger.h  ProcessRunner.h  SafeDelete.h
cli/src/: config.cpp  main.cpp
cli/src/ui/: BuildArchiveView.cpp  ComfyUI.cpp  ConfigView.cpp
cli/src/utils/: Logger.cpp  ProcessRunner.cpp  SafeDelete.cpp
scripts/: build_app.sh  build_app_intel.sh  build_lsp.sh  run.sh  universal.sh
(+1142 files in other folders)
